<resources>
    <string name="app_name">Sports?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="title_activity_available__games">Available_Games</string>
    <string-array name="all_sports">
        <item>Soccer</item>
        <item>Football</item>
        <item>Ultimate Frisbee</item>
        <item>Basketball</item>
        <item>Lacrosse</item>
        <item>Volleyball</item>
        <item>Spikeball</item>
        <item>Tennis</item>
    </string-array>
    <string-array name="all_distances">
        <item>Any Distance</item>
        <item>0 – 1 miles</item>
        <item>1 – 3 miles</item>
        <item>3 – 10 miles</item>
        <item>10+ miles</item>
    </string-array>
    <string-array name="all_sizes">
        <item>100</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="already_have_account">Already have an account?</string>
    <string name="title_activity_profile_page">profile_page</string>
    <string name="title_activity_edit_profile">edit_profile</string>
    <string name="title_activity_navigation__drawer">Navigation_Drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Passwords don\'t match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="title_activity_maps">Map</string>
    <string name="web_client_id">887608161531-6qhoa2v143ggji2dcrk4pi02f4c37t3a.apps.googleusercontent.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_sport">Select a sport</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="select_location">Select a Location</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="select_start_time">Select a Start Time</string>
    <string name="select_end_time">Select an End Time</string>
    <string name="add_game">Add Game</string>
    <string name="create_game">Create a New Game</string>
    <string name="games">Games</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="join_game">Join Game</string>
    <string name="leave_game">Leave Game</string>
    <string name="follow">Follow</string>
    <string name="remind_games">Remind me of games:</string>
    <string name="my_games">My Games</string>
    <string name="cancel">Cancel</string>
    <string name="sport">Sport</string>
    <string name="host">Host</string>
    <string name="location">Location</string>
    <string name="players">Players</string>
    <string name="capacity">Capacity</string>
    <string name="select_capacity">Select game size</string>
    <string name="title_activity_maps_ii">Map</string>
    <string name="enter_location">Enter Game Location:</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
</resources>
