<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="@android:color/holo_blue_bright"
    tools:context=".Activities.View_Game"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game"
        android:textSize="38sp"
        android:textColor="@color/titleGreen"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_sport"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/sport_list"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/SelectTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_start_time" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/location"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/MapButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_location" />

    <Button
        android:id="@+id/New_Game_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_game" />

</LinearLayout>