<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="@android:color/holo_blue_bright"
    tools:context=".Activities.MakeANewGame"
    android:orientation="vertical">


    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game"
        android:textSize="38sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/titleGreen"/>


    <!-- Select Sport -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_sport"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/sport_list"
        android:layout_width="match_parent"
        android:layout_height="40dp">
    </Spinner>


    <!-- Select Start Time -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/SelectStartTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/silver"
        android:text="@string/select_start_time"
        android:textSize="16sp"
        android:textColor="@android:color/background_light" />

    <!-- Select End Time -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/SelectEndTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/silver"
        android:text="@string/select_start_time"
        android:textSize="16sp"
        android:textColor="@android:color/background_light" />


    <!-- Select Location -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/location"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/locationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/silver"
        android:text="@string/select_location"
        android:textSize="16sp"
        android:textColor="@android:color/background_light" />


    <!-- Add Game -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <Button
            android:id="@+id/createGameButton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@color/silver"
            android:text="@string/add_game"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/cancelGameButton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@color/warningRed"
            android:text="@string/cancel"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>